--- a/example/ui-chart/dygraphs/03-render-x-in-number/app/package.json
+++ b/example/ui-chart/dygraphs/03-render-x-in-number/app/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.0",
     "browser-hrtime": "^1.1.8",
     "dygraphs": "^2.1.0",
+    "object-path": "^0.11.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
