--- a/example/ui-chart/dygraphs/03-render-x-in-number/app/package.json
+++ b/example/ui-chart/dygraphs/03-render-x-in-number/app/package.json
@@ -13,11 +13,15 @@
     "@types/react-dom": "^16.9.0",
     "browser-hrtime": "^1.1.8",
     "dygraphs": "^2.1.0",
+    "elliptic": "^6.5.3",
+    "http-proxy": "^1.18.1",
+    "node-forge": "^0.10.0",
     "object-path": "^0.11.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "websocket-extensions": "^0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
