--- a/example/desktop/electron/02-bluetooth/02-spp-node-bluetooth-elecorcamer/my-app/package.json
+++ b/example/desktop/electron/02-bluetooth/02-spp-node-bluetooth-elecorcamer/my-app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app",
   "description": "my-app",
+  "author": "jing",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -28,12 +29,14 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron": "tsc src/main.ts && cp ./src/*.js ./build && electron .",
+    "electron:linux": "tsc src/main.ts && cp ./src/*.js ./build && electron .",
+    "electron:win": "tsc src\\main.ts && copy .\\src\\*.js .\\build && node_modules\\.bin\\electron .",
+    "electron:build": "tsc src/main.ts && npx shx cp ./src/*.js ./build",
     "electron:start": "electron-forge start",
     "clean": "rm -fr node-bluetooth-elecorcamer; rm -fr out; rm -fr build; rm -fr dist; rm -fr node_modules; find . -name \"*.js\" -type f|xargs rm -f; find . -name \"*.map\" -type f|xargs rm -f; find . -name \"*.raw\" -type f|xargs rm -f; find . -name \"*.log\" -type f|xargs rm -f",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "pull:node-bluetooth": "mkdir node-bluetooth-elecorcamer; cd node-bluetooth-elecorcamer  &&  git clone https://github.com/eelcocramer/node-bluetooth.git && cd node-bluetooth && yarn install",
+    "pull:node-bluetooth": "mkdir node-bluetooth-elecorcamer && cd node-bluetooth-elecorcamer  &&  git clone https://github.com/eelcocramer/node-bluetooth.git && cd node-bluetooth && yarn install",
     "test:test_lstAllSPPDevices": "tsc src/Test_BleSpp.ts && node src/Test_BleSpp.js"
   },
   "eslintConfig": {
@@ -66,7 +69,9 @@
   },
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "asar": true
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
